--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "12.2.0",
+    "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -19,6 +20,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
+    "sass": "^1.53.0",
     "typescript": "4.7.4"
   }
 }
