--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "next": "12.2.0",
     "next-images": "^1.8.4",
     "react": "18.2.0",
