--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.2.0",
     "next-images": "^1.8.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-remove-scroll": "^2.5.5"
   },
   "devDependencies": {
     "@types/node": "18.0.1",
