--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "clsx": "^1.2.1",
     "next": "12.2.0",
     "next-images": "^1.8.4",
+    "next-optimized-images": "^2.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-remove-scroll": "^2.5.5"
+    "react-remove-scroll": "^2.5.5",
+    "swiper": "^8.3.1"
   },
   "devDependencies": {
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/swiper": "^6.0.0",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "sass": "^1.53.0",
